--- a/media768.css
+++ b/media768.css
@@ -1,4 +1,5 @@
 @media (max-width: 1023px) {
+      /* Footer start */
   ._container {
     display: block;
     background: none;
@@ -61,4 +62,5 @@
     margin-right: 50px;
     margin-top: 0px;
   }
+   /* Footer end */
 }
