--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@
       url("../fonts/roboto-v29-latin_cyrillic-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 body {
-    font-family: "Roboto";
-    font-style: normal;
-  }
-  html a {
-    text-decoration: none;
-  }
+  font-family: "Roboto";
+  font-style: normal;
+}
+html a {
+  text-decoration: none;
+}
 .wrapper {
   background-color: black;
   overflow-x: hidden;
@@ -45,7 +45,7 @@ body {
   max-width: 1636px;
   margin: 0 auto;
 }
-
+/* Footer start */
 .footer {
   display: flex;
   justify-content: space-between;
@@ -105,3 +105,4 @@ body {
   width: 45.23px;
   height: 41.43px;
 }
+/* Footer end */
