--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
   font-style: italic;
   font-weight: 300;
   src: local(""),
-    url("../fonts/roboto-v29-latin_cyrillic-300italic.woff2") format("woff2"),
+    url("./fonts/roboto-v29-latin_cyrillic-300italic.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/roboto-v29-latin_cyrillic-300italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("./fonts/roboto-v29-latin_cyrillic-300italic.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* roboto-regular - latin_cyrillic */
 @font-face {
@@ -14,9 +14,9 @@
   font-style: normal;
   font-weight: 400;
   src: local(""),
-    url("../fonts/roboto-v29-latin_cyrillic-regular.woff2") format("woff2"),
+    url("./fonts/roboto-v29-latin_cyrillic-regular.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/roboto-v29-latin_cyrillic-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("./fonts/roboto-v29-latin_cyrillic-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 /* roboto-700 - latin_cyrillic */
 @font-face {
@@ -24,9 +24,9 @@
   font-style: normal;
   font-weight: 700;
   src: local(""),
-    url("../fonts/roboto-v29-latin_cyrillic-700.woff2") format("woff2"),
+    url("./fonts/roboto-v29-latin_cyrillic-700.woff2") format("woff2"),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-      url("../fonts/roboto-v29-latin_cyrillic-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+      url("./fonts/roboto-v29-latin_cyrillic-700.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 body {
   font-family: "Roboto";
