--- a/media1024.css
+++ b/media1024.css
@@ -14,6 +14,7 @@
   margin-left: 62px;
 }
 .partners_right_block p {
+  max-width: 359px;
   font-size: 17px;
   margin-left: 62px;
   margin-top: 20px;
