--- a/media360.css
+++ b/media360.css
@@ -1,8 +1,45 @@
 @media (max-width: 767px) {
-    /* Footer start */
   ._container {
     max-width: 322px;
   }
+  /* Partners start */
+  #partners_logo_1 {
+    width: 271.77px;
+    left: 40.21px;
+    top: 0px;
+  }
+  #partners_logo_2 {
+    left: 39px;
+    top: 31.5px;
+    width: 280.41px;
+  }
+  .partners_right_block h2 {
+    max-width: 235px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    margin-top: 35.7px;
+  }
+  .partners_right_block p {
+    font-size: 12px;
+    line-height: 14px;
+    max-width: 319px;
+    margin-left: 21px;
+  }
+  .button_start {
+    width: 187px;
+    height: 40px;
+    font-size: 24px;
+    line-height: 28px;
+    margin-top: 38px;
+  }
+  .partners {
+    max-width: 360px;
+    height: 586px;
+  }
+  /* Footer start */
+
   .footer_left_block {
     height: 90px;
   }
