add: Tokenomica finish

--- a/media1024.css
+++ b/media1024.css
@@ -2,43 +2,101 @@
   ._container {
     max-width: 890px;
   }
- /* Partners start */
- .partners_left_block {
-  width: 367px;
-  height: 387.57px;
-  margin-left: 67px;
-}
-.partners_right_block h2 {
-  font-size: 35px;
-  margin-top: 65px;
-  margin-left: 62px;
-}
-.partners_right_block p {
-  max-width: 359px;
-  font-size: 17px;
-  margin-left: 62px;
-  margin-top: 20px;
-}
-.button_start {
-  margin-left: 62px;
-  margin-top: 42px;
-  width: 134px;
-  height: 28.53px;
-  font-size: 17px;
-  line-height: 20px;
-}
-#partners_logo_1 {
-  width: 354.16px;
-}
-#partners_logo_2 {
-  width: 365.42px;
-  top: 39.42px;
-}
- /* Partners finish */
+  /* Tokenomica start */
+  .tokenomica {
+    margin-bottom: 96px;
+  }
+  .tokenomica h2 {
+    font-size: 35px;
+    line-height: 41px;
+  }
+  .tokenomica_left {
+    width: 568px;
+    height: 198px;
+  }
+  .tokenomica_left > p {
+    font-size: 17px;
+    line-height: 20px;
+    margin-left: 33px;
+    margin-top: 21px;
+    margin-right: 13px;
+  }
+  .tokenomica_right_text {
+    width: 287px;
+    height: 24px;
+    margin-top: 9px;
+  }
+  #tokenomica_2 {
+    width: 258px;
+    height: 24px;
+  }
+  #tokenomica_3 {
+    width: 178px;
+    height: 24px;
+  }
+  #tokenomica_4 {
+    width: 156px;
+    height: 24px;
+  }
+  #tokenomica_5 {
+    width: 145px;
+    height: 24px;
+  }
+  #tokenomica_6 {
+    width: 86px;
+    height: 24px;
+  }
+  .tokenomica_right_text > p {
+    font-size: 13px;
+    line-height: 15px;
+  }
+  .tokenomica_right_percent {
+    font-size: 13px;
+    line-height: 15px;
+    margin-left: 5px;
+  }
+  .tokenomica_right_percent p {
+    margin-left: 0px;
+  }
+  /* Tokenomica finish */
 
- /* Footer start */
-  .footer_left_block, 
-  .footer_right_block  {
+  /* Partners start */
+  .partners_left_block {
+    width: 367px;
+    height: 387.57px;
+    margin-left: 67px;
+  }
+  .partners_right_block h2 {
+    font-size: 35px;
+    margin-top: 65px;
+    margin-left: 62px;
+  }
+  .partners_right_block p {
+    max-width: 359px;
+    font-size: 17px;
+    margin-left: 62px;
+    margin-top: 20px;
+  }
+  .button_start {
+    margin-left: 62px;
+    margin-top: 42px;
+    width: 134px;
+    height: 28.53px;
+    font-size: 17px;
+    line-height: 20px;
+  }
+  #partners_logo_1 {
+    width: 354.16px;
+  }
+  #partners_logo_2 {
+    width: 365.42px;
+    top: 39.42px;
+  }
+  /* Partners finish */
+
+  /* Footer start */
+  .footer_left_block,
+  .footer_right_block {
     height: 119px;
   }
   .footer_left_block img {
@@ -73,5 +131,5 @@
     width: 27.24px;
     height: auto;
   }
-   /* Footer end */
+  /* Footer end */
 }
