--- a/media360.css
+++ b/media360.css
@@ -2,6 +2,74 @@
   ._container {
     max-width: 322px;
   }
+  /* Tokenomica start */
+  .tokenomica {
+    margin-bottom: 50px;
+  }
+  .tokenomika_line {
+    top: 35px;
+    width: 8px;
+    height: 435px;
+  }
+  .tokenomica h2 {
+    font-size: 24px;
+    line-height: 28px;
+  }
+  .tokenomica_left {
+    width: 319px;
+    height: 185px;
+    margin-bottom: 6px;
+    padding-top: 37px;
+  }
+  .tokenomica_left > p {
+    font-size: 12px;
+    line-height: 14px;
+    margin-left: 19px;
+    margin-top: -12px;
+    margin-right: 19px;
+  }
+
+  .tokenomica_right {
+    margin-left: 17px;
+  }
+  .tokenomica_right_text {
+    width: 270px;
+    height: 22px;
+    margin-top: 9px;
+  }
+  #tokenomica_2 {
+    width: 242px;
+    height: 22px;
+  }
+  #tokenomica_3 {
+    width: 167px;
+    height: 22px;
+  }
+  #tokenomica_4 {
+    width: 147px;
+    height: 22px;
+  }
+  #tokenomica_5 {
+    width: 127px;
+    height: 22px;
+  }
+  #tokenomica_6 {
+    width: 81px;
+    height: 22px;
+  }
+  .tokenomica_right_text > p {
+    font-size: 14px;
+    line-height: 16px;
+    margin-left: 11px;
+  }
+  .tokenomica_right_percent {
+    font-size: 13px;
+    line-height: 15px;
+    margin-left: 7px;
+  }
+
+  /* Tokenomica finish */
+
   /* Partners start */
   #partners_logo_1 {
     width: 271.77px;
