--- a/media768.css
+++ b/media768.css
@@ -2,6 +2,91 @@
   ._container {
     max-width: 728px;
   }
+  /* Tokenomica start */
+  .tokenomica {
+    position: relative;
+    margin-bottom: 100px;
+  }
+  .tokenomica_full {
+    display: inline-block;
+    /* flex-direction: column; */
+  }
+  .tokenomika_line {
+    display: block;
+    position: absolute;
+    top: 55px;
+    width: 18px;
+    height: 790px;
+    left: 0px;
+    background: linear-gradient(
+      270.02deg,
+      #991660 42.56%,
+      rgba(153, 22, 96, 0.12) 88.86%
+    );
+    border-radius: 15px;
+    z-index: 3;
+  }
+  .tokenomica h2 {
+    font-size: 40px;
+    line-height: 47px;
+  }
+  .tokenomica_left {
+    width: 689px;
+    height: 345px;
+    margin-bottom: 6px;
+    padding-top: 37px;
+  }
+  .tokenomica_left > p {
+    font-size: 23px;
+    line-height: 27px;
+    margin-left: 42px;
+    /* margin-top: 0px; */
+    margin-right: 47px;
+  }
+  /* .tokenomica_right_percent {
+    margin-left: 25px;
+  } */
+  .tokenomica_right {
+    margin-left: 25px;
+  }
+  .tokenomica_right_text {
+    width: 578px;
+    height: 42px;
+    margin-top: 17px;
+    z-index: 1;
+  }
+  #tokenomica_2 {
+    width: 518px;
+    height: 42px;
+  }
+  #tokenomica_3 {
+    width: 357px;
+    height: 42px;
+  }
+  #tokenomica_4 {
+    width: 315px;
+    height: 42px;
+  }
+  #tokenomica_5 {
+    width: 271px;
+    height: 42px;
+  }
+  #tokenomica_6 {
+    width: 173px;
+    height: 42px;
+  }
+  .tokenomica_right_text > p {
+    font-size: 23px;
+    line-height: 27px;
+    margin-left: 24px;
+  }
+  .tokenomica_right_percent {
+    font-size: 23px;
+    line-height: 27px;
+    margin-left: 15px;
+  }
+  /* Tokenomica finish */
+
   /* Partners start */
   .partners {
     height: 848px;
